hphp/test/zend/bad/Zend/tests/bug62892.php
<?php
 
trait myTrait {
     public function run() {}
}

class myClass {
     use myTrait {
         MyTrait::run as private;
     }
}
$class = new \ReflectionClass('myClass');
var_dump($class->getTraitAliases());

?>